# CodeReviewAI

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  logger_config.py  main.py  pyproject.toml  settings.py
app/: main.py
app/services/: github_service.py  github_services.py  manage_api_service.py  openai_services.py
app/tests/: test_for_github_service.py  test_for_main.py  test_for_manage_api_service.py  test_for_openai_service.py
