[tool.black]
line-length = 79

[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
openai = "^1.52.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
requests = "^2.32.3"
fastapi = "^0.115.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
