[tool.black]
line-length = 79

[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
openai = "^1.52.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
requests = "^2.32.3"
fastapi = "^0.115.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
tiktoken = "^0.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
aioredis = "^2.0.1"
redis = "^5.1.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
